# tdg

./: .gitignore  .pre-commit-config.yaml  GENLAYOUT.md  NOTES.md  PROMPT.md  README.md  cover.sh  do_py.py  pyproject.toml
evaluate/: human_eval.py
evaluate/results/: filter_by_substring.py  has_close_elements.py  intersperse.py  mean_absolute_deviation.py  parse_nested_parens.py  rolling_max.py  separate_paren_groups.py  sum_product.py  truncate_number.py
notebooks/: code_llama.ipynb  ds_exploration.ipynb  openai_test_completion.ipynb  speedups.ipynb
src/tdg/: __init__.py  _gen.py  config.py  context_managers.py  extract.py  extractors.py  generator.py  parse_humaneval.py  parsing.py  pipeline.py
src/tdg/agents/: __init__.py  base.py  dev.py  nav.py  tdd.py  templates.py  test.py
src/tdg/executors/: base.py  test.py
src/tdg/extractors/: code2str.py  str2str.py
test_e2e/: test_pipeline.py
test_e2e/data/: good_test.py  imports_fine_bad_fixture.py
test_scratch/: test_before_scratch.py  test_pytest_gen.py
tests/: __init__.py  completions.py  test_completion.py  test_data_pipeline.py  test_exec.py  test_extractor.py  test_gen_config.yaml  test_pkggen.py
tests/test_async/: completions.py  conftest.py  test_completion.py
tests/test_e2e/: conftest.py  test_generator.py  test_pipeline.py
tests/test_e2e/data/: bad_imports_test.py
tests/test_exec/: test_exec_base.py
tests/test_plugin/: test_plugin.py
tests/test_plugin/basic/: after.py  test_before.py
tests/tests_sync/: test_completion.py  test_data_pipeline.py  test_extractor.py  test_parsing.py
tests/tests_sync/extractor_data/: demo_test_suite.txt
