[tool.poetry]
name = "tdg"
version = "0.1.0"
description = ""
authors = ["Matthew Billman <mgbvox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.39.1"
torch = "^2.2.1"
accelerate = "^0.28.0"
openai = "^1.14.3"
pinliner = "^0.2.0"
python-dotenv = "^1.0.1"
dspy = {git = "https://github.com/stanfordnlp/dspy"}
cs224u-utils = {git = "https://github.com/mgbvox/cs224u-utils"}


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.2"
mypy = "^1.9.0"
tox = "^4.14.1"
pre-commit = "^3.6.2"
jupyter = "^1.0.0"
datasets = "^2.18.0"
pytest = "^8.1.1"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
