[tool.poetry]
name = "tdg"
version = "0.1.0"
description = ""
authors = ["Matthew Billman <mgbvox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.39.1"
torch = "^2.2.1"
accelerate = "^0.28.0"
openai = "^1.14.3"
pinliner = "^0.2.0"
python-dotenv = "^1.0.1"
cs224u-utils = {git = "https://github.com/mgbvox/cs224u-utils"}
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.3.0"}
ruff = "^0.3.2"
mypy = "^1.9.0"
tox = "^4.14.1"
pre-commit = "^3.6.2"
jupyter = "^1.0.0"
datasets = "^2.18.0"
pytest = "^8.1.1"
matplotlib = "^3.8.3"
pytest-cov = "^5.0.0"
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    # test files have a lot of deliberately improper code in them
    "test*",
    # common ignores
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module="cs224u_utils.*"
ignore_missing_imports = true
